# deribitsimplebotapp

./: .dockerignore  .gitignore  README.md  docker-compose.yml
app/: app.py  config.yaml  pyproject.toml
db/init-scripts/: create.sql
unittest_example/: README.md  csvstore.py  pyproject.toml  test.csv  unittest_example.py
