[tool.poetry]
name = "unittest_example"
version = "0.1.0"
description = "Unittest Example"
authors = ["Eliseev Nikolay <n.a.eliseev@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2"
deribitsimplebot = "^0.2.2"

[tool.poetry.scripts]
start-test = "unittest_example:main"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"